@@ -8,12 +8,14 @@ CHG: Ticket#206 - TBaseValidator.OnValidate is raised only when the validator is
 ENH: Ticket#220 - TClientScripts method to import custom javascript files (Wei)
 ENH: Ticket#225 - TRadioButton::getRadioButtonsInGroup() added (Wei)
 ENH: Ticket#223 - Use TRequiredFieldValidator for TRadioButtons with GroupName property (Wei)
+ENH: StringLength, multi-byte, check in TRangeValidator (Wei)
 ENH: Ticket#263 - TListBox and TDropDownList support optgroup now (Qiang)
 ENH: Ticket#277 - Added TControl.CustomData property (Qiang)
 ENH: Ticket#287 - TControl::broadcastEvent() may raise events now (Qiang)
 ENH: Ticket#292 - Added THttpRequest::parseUrl() so that it is easier to be extended (Qiang)
 ENH: Better URL 'Path' format (Qiang)
 NEW: Added TStyleSheet (Wei)
+
 
 Version 3.0.2 July 2, 2006
 ==========================
